--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,36 @@
 version: '3'
 services:
 
-  masspayments:
-
-    image: "10.90.0.30:8123/confidence/masspayments/local:1.7.0"
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    hostname: zookeeper
     ports:
-      - "8090:8090"
-      - "8787:8787"
+      - "2181:2181"
 
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    hostname: kafka
+    ports:
+      - "9092:9092"
     environment:
-      TZ: America/Sao_Paulo
-      mp.liquibase.url: jdbc:sqlserver://127.0.0.1;databaseName=masspayments
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
 
-    volumes:
-      - /mnt/:/mnt/
-      - /logs:/logs
+  producer:
+    image: "microservice-calculator-example"
+    container_name: producer
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: producer
+      server.port: 8080
+      spring.kafka.bootstrap-servers: kafka:9092
+
+  consumer:
+    image: "microservice-calculator-example"
+    container_name: consumer
+    environment:
+      SPRING_PROFILES_ACTIVE: consumer
+      spring.kafka.bootstrap-servers: kafka:9092
